--- a/src/scss/utilities/_spacing.scss
+++ b/src/scss/utilities/_spacing.scss
@@ -23,6 +23,10 @@
   margin-top: var(--spacing-xl) !important;
 }
 
+.mt-6 {
+  margin-top: 2.5rem !important;
+}
+
 .mb-xs,
 .mb-1 {
   margin-bottom: var(--spacing-xs) !important;
@@ -46,6 +50,10 @@
 .mb-xl,
 .mb-5 {
   margin-bottom: var(--spacing-xl) !important;
+}
+
+.mb-6 {
+  margin-bottom: 2.5rem !important;
 }
 
 .mb-8 {
